infra/k8s/auth-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dpl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth 
  template:
    metadata:
      labels: 
        app: auth
    spec:
      containers:
        - name: auth
          image: tiagorosadacosta123456/ticked-auth
          ports:
            - containerPort: 3000
