infra/k8s/client-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client 
  template:
    metadata:
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: tiagorosadacosta123456/ticked-client
          ports:
            - containerPort: 3000
