infra/k8s/auth-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth 
  ports:
    - name: auth-application
      protocol: TCP
      port: 80
      targetPort: 3000
