infra/k8s/client-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client 
  ports:
    - name: client-application
      protocol: TCP
      port: 80
      targetPort: 3000
