infra/k8s/mongo-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  selector:
    app: mongo 
  ports:
    - name: database
      protocol: TCP
      port: 27017
      targetPort: 27017
